# usb-relay

./: README.md
firmware/: CMakeLists.txt
firmware/boards/ports/: port_common.h  port_rp2040.c  port_stm32f0.c  port_stm32f1.c  port_stm32f4.c
firmware/include/: command.h  relay.h  tusb_config.h
firmware/src/: command.c  main.c  relay.c  usb_descriptors.c
udev/: 99-usb-relay-stm32.rules  99-usb-relay.rules  install-udev-rules.sh
